[gd_scene load_steps=16 format=2]

[ext_resource path="res://Attacking/Attacker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Players/CharacterBase.gd" type="Script" id=2]
[ext_resource path="res://Players/VisibilityMaterial.tres" type="Material" id=3]
[ext_resource path="res://Players/VisibilityLights.gd" type="Script" id=4]
[ext_resource path="res://Resources/Icons/icon_heart.png" type="Texture" id=5]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 1, 1, 2 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 0.5, 1, 0, 0.5, -1, 0, 0.5, 1, 0, 0.5, -1, -0.5, -0.5, 1, 0.5, -0.5, -1, 0.5, -0.5, 1, -0.5, -0.5, -1, 0, 0.5, 1, 0, 0.5, -1, 0, 0.5, -1, 0, 0.5, 1, 0.5, -0.5, 1, -0.5, -0.5, -1, 0.5, -0.5, -1, -0.5, -0.5, 1, -0.5, -0.5, 1, 0.5, -0.5, 1, -0.5, -0.5, -1, 0.5, -0.5, -1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("HealthDisplay/Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_unshaded = true
params_billboard_mode = 1
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.32
albedo_texture = SubResource( 3 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 3, 1 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.571906, 0 ), -8.57272, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 0.25
flag_align_y = true
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.87
initial_velocity_random = 0.13
angular_velocity = -72.45
linear_accel = -90.57
radial_accel = 7.55
radial_accel_random = 0.39
angle = 28.8
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 7 )
hue_variation = 0.26
hue_variation_random = 0.44

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="PrismMesh" id=10]
material = SubResource( 9 )
size = Vector3( 0.5, 0.5, 0.5 )

[node name="CharacterBase" type="KinematicBody" groups=[
"Damagable",
]]
script = ExtResource( 2 )

[node name="Attacker" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.078, -0.156 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
material_override = ExtResource( 3 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="VisibilityLights" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="OmniLight" type="OmniLight" parent="VisibilityLights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
layers = 0
light_specular = 0.0
shadow_enabled = true
omni_attenuation = 0.0743254

[node name="SightLight" type="SpotLight" parent="VisibilityLights"]
transform = Transform( 1, 0, 0, 0, 0.9872, 0.159485, 0, -0.159485, 0.9872, 0, 1, 0 )
layers = 0
light_energy = 5.0
light_specular = 0.0
shadow_enabled = true
spot_range = 30.0
spot_attenuation = 6.5416e-05
spot_angle = 35.0
spot_angle_attenuation = 1e+06

[node name="HealthDisplay" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2 )
layers = 0
material_override = SubResource( 4 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = null

[node name="Viewport" type="Viewport" parent="HealthDisplay"]
size = Vector2( 300, 100 )
transparent_bg = true
msaa = 1
render_target_v_flip = true
render_target_update_mode = 3

[node name="HealthBar" type="HBoxContainer" parent="HealthDisplay/Viewport"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Heart1" type="TextureRect" parent="HealthDisplay/Viewport/HealthBar"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="HealthDisplay/Viewport/HealthBar"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="HealthDisplay/Viewport/HealthBar"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="OwnMeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
material_override = ExtResource( 3 )
mesh = SubResource( 1 )
material/0 = null

[node name="HitParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10206, 0 )
emitting = false
amount = 50
lifetime = 0.43
one_shot = true
explosiveness = 0.38
randomness = 0.11
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )
